@@ -292,7 +292,7 @@ public:
 	void SetCustomDecalFrames( int nFrames );
 	int GetCustomDecalFrames( void );
 
-	void CBasePlayer::TabulateAmmo( void );
+	//void CBasePlayer::TabulateAmmo( void );
 
 	float m_flStartCharge;
 	float m_flAmmoStartCharge;
