@@ -16,6 +16,8 @@ TODO List:-
 
 >> Complete 'botdontmove' in order for "GolfBots" to stay stationary
 
+>> To allow medic bots to heal more often, but not allow `JOB_BUFF_ALLY` to consume to many cells as engineers
+
 >> To allow soldier bots to Rocket Jump easily
 
 >> Fix bots navigation when shot by enemies as they sometimes cannot seem to detect where damage is coming from
